--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  --bgColor: #1F1E1C;
-  --accentColor: #41C7B9;
+  --bgColor: #1f1e1c;
+  --accentColor: #41c7b9;
   --font: "Arial", sans-serif;
 }
 
@@ -13,6 +13,8 @@ body {
   outline: 2px dotted #ffffff;
   outline-offset: 10px;
   display: block;
+  box-sizing: border-box;
+  height: 95vh;
 }
 
 #logo {
@@ -62,6 +64,7 @@ body {
   background-color: #efefef;
   box-shadow: 0px 0px 0px 1px #dadad9 inset;
   box-sizing: border-box;
+  transition: 0.2s;
 }
 
 #followme {
